feat(sites): URL import aliases + cached remote YAML bundles (#300)
* feat(sites): add URL import aliases with local cache index

* chore(vt): remove publish header comment from docs partial

* chore(vt): remove publish header comment from docs template

* feat(vt-sites): simplify docs layout contract and publish schema

* chore(vt-sites): remove data and schema assets from bundle

* docs(sites): recommend shell templates and logic-in-partials pattern

* feat(vt): prepublish rettangoli sites shell templates

* refactor(sites): publish import assets from @rettangoli/sites

* feat(sites): switch rettangoli.dev to URL-imported templates and partials

* refactor(rettangoli.dev): keep docs template variants local

* refactor(sites): drop docs templates and use base docs mode

* feat(sites): add _bind frontmatter alias mapping

* docs(sites): document _bind as system frontmatter

* refactor(sites): publish generic base/docs templates

* refactor(sites): flatten published assets layout

* refactor(sites): remove default-base template asset

--- a/apps/rettangoli.dev/sites.config.yaml
+++ b/apps/rettangoli.dev/sites.config.yaml
@@ -1,3 +1,13 @@
+imports:
+  templates:
+    base: https://cdn.jsdelivr.net/npm/@rettangoli/sites@1.0.0-rc10/sites/templates/base.yaml
+    docs: https://cdn.jsdelivr.net/npm/@rettangoli/sites@1.0.0-rc10/sites/templates/docs.yaml
+  partials:
+    seo: https://cdn.jsdelivr.net/npm/@rettangoli/sites@1.0.0-rc10/sites/partials/seo.yaml
+    navbar: https://cdn.jsdelivr.net/npm/@rettangoli/sites@1.0.0-rc10/sites/partials/navbar.yaml
+    mobile-nav: https://cdn.jsdelivr.net/npm/@rettangoli/sites@1.0.0-rc10/sites/partials/mobile-nav.yaml
+    docs-sidebar: https://cdn.jsdelivr.net/npm/@rettangoli/sites@1.0.0-rc10/sites/partials/docs-sidebar.yaml
+
 markdownit:
   html: true
   linkify: true
