feat(tui): add global selector service and selector dialog modes

--- a/packages/rettangoli-tui/examples/showcase/components/showcase/showcase.view.yaml
+++ b/packages/rettangoli-tui/examples/showcase/components/showcase/showcase.view.yaml
@@ -19,6 +19,7 @@ template:
       - rtgl-text: "- rtgl-textarea"
       - rtgl-text: "- rtgl-divider"
       - rtgl-text: "- rtgl-dialog"
+      - rtgl-text: "- rtgl-selector-dialog"
       - rtgl-divider w=72: null
       - rtgl-text: "Task editor demo"
       - rtgl-text: "Task title:"
@@ -48,13 +49,15 @@ template:
       - rtgl-text: "Message: ${message}"
       - rtgl-text: "Last Key: ${lastKey}"
       - rtgl-text: "Dialog: ${dialogStatus}"
+      - rtgl-text: "Selector Service: global (${selectorSelectedLabel})"
       - rtgl-dialog open=${titleDialogOpen} title="Edit Task Title" w=66 x=6 y=10:
           - rtgl-text: "Native multiline editor (no nvim)"
           - rtgl-textarea label=Title :value=titleDraft :cursorRow=titleCursorRow :cursorCol=titleCursorCol active=true w=60 h=6 placeholder="Write task title": null
           - rtgl-text: "Ctrl+S save | Esc cancel | Enter newline | Auto-wrap | Arrows"
       - rtgl-divider w=72: null
       - rtgl-text: "Controls"
-      - rtgl-text: "q quit | r reset | d open title dialog"
+      - rtgl-text: "q quit | r reset | d open title dialog | s global full-screen selector | f global centered selector"
       - rtgl-text: "t also opens title dialog editor"
       - rtgl-text: "up/down select task row (list + table highlight)"
+      - rtgl-text: "inside selector: up/down move | enter select | esc cancel"
       - rtgl-text: "e open content in $EDITOR/$VISUAL (nvim/vim fallback)"
