chore(check): rename rettangoli-check mjs scripts to js

--- a/packages/rettangoli-check/package.json
+++ b/packages/rettangoli-check/package.json
@@ -12,23 +12,23 @@
     "rtgl-check": "./src/cli/bin.js"
   },
   "scripts": {
-    "test:scenarios": "node ./test/run-scenarios.mjs",
-    "test:diff-js-exports": "node ./scripts/differential-js-exports.mjs",
-    "test:fuzz-template-pipeline": "node ./scripts/fuzz-template-pipeline.mjs",
-    "test:fuzz-jempl-parser": "node ./scripts/fuzz-jempl-parser.mjs",
-    "test:jempl-parser-contract": "node ./scripts/test-jempl-parser-contract.mjs",
-    "test:scope-graph-range-contract": "node ./scripts/test-scope-graph-range-contract.mjs",
-    "test:fe-frontend-component-identity-contract": "node ./scripts/test-fe-frontend-component-identity-contract.mjs",
-    "test:fe-frontend-handler-contract": "node ./scripts/test-fe-frontend-handler-contract.mjs",
-    "test:fe-frontend-lifecycle-contract": "node ./scripts/test-fe-frontend-lifecycle-contract.mjs",
-    "test:fe-frontend-oxc-contract": "node ./scripts/test-fe-frontend-oxc-contract.mjs",
-    "test:fe-frontend-schema-normalization-contract": "node ./scripts/test-fe-frontend-schema-normalization-contract.mjs",
-    "test:semantic-engine-contract": "node ./scripts/test-semantic-engine-contract.mjs",
-    "test:type-system-contract": "node ./scripts/test-type-system-contract.mjs",
-    "test:yahtml-parser-snapshots": "node ./scripts/test-yahtml-parser-snapshots.mjs",
-    "test:yahtml-parser-crash": "node ./scripts/test-yahtml-parser-crash-containment.mjs",
-    "test:fuzz-yahtml-parser": "node ./scripts/fuzz-yahtml-parser.mjs",
-    "test:fuzz-fe-contract-combinations": "node ./scripts/fuzz-fe-contract-combinations.mjs"
+    "test:scenarios": "node ./test/run-scenarios.js",
+    "test:diff-js-exports": "node ./scripts/differential-js-exports.js",
+    "test:fuzz-template-pipeline": "node ./scripts/fuzz-template-pipeline.js",
+    "test:fuzz-jempl-parser": "node ./scripts/fuzz-jempl-parser.js",
+    "test:jempl-parser-contract": "node ./scripts/test-jempl-parser-contract.js",
+    "test:scope-graph-range-contract": "node ./scripts/test-scope-graph-range-contract.js",
+    "test:fe-frontend-component-identity-contract": "node ./scripts/test-fe-frontend-component-identity-contract.js",
+    "test:fe-frontend-handler-contract": "node ./scripts/test-fe-frontend-handler-contract.js",
+    "test:fe-frontend-lifecycle-contract": "node ./scripts/test-fe-frontend-lifecycle-contract.js",
+    "test:fe-frontend-oxc-contract": "node ./scripts/test-fe-frontend-oxc-contract.js",
+    "test:fe-frontend-schema-normalization-contract": "node ./scripts/test-fe-frontend-schema-normalization-contract.js",
+    "test:semantic-engine-contract": "node ./scripts/test-semantic-engine-contract.js",
+    "test:type-system-contract": "node ./scripts/test-type-system-contract.js",
+    "test:yahtml-parser-snapshots": "node ./scripts/test-yahtml-parser-snapshots.js",
+    "test:yahtml-parser-crash": "node ./scripts/test-yahtml-parser-crash-containment.js",
+    "test:fuzz-yahtml-parser": "node ./scripts/fuzz-yahtml-parser.js",
+    "test:fuzz-fe-contract-combinations": "node ./scripts/fuzz-fe-contract-combinations.js"
   },
   "files": [
     "src",
